# container-app-template

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml
infra/: main.tf  variables.tf
